yaml/2.apps/1.post-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rest-post-app-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: rest-post-app-service
  template:
    metadata:
      labels:
        app: rest-post-app-service
    spec:
      containers:
      - name: rest-post-app-service
        image: edowon0623/sample-post:latest
        ports:
        - containerPort: 8080
        imagePullPolicy: Always
