yaml/2.apps/2.sample-service.yml
apiVersion: v1
kind: Service
metadata:
  name: rest-sample-app-service
spec:
  ports:
    - name: "8080"
      port: 8081
      targetPort: 8888
  selector:
    app: rest-sample-app
  type: NodePort
